--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -2,3 +2,27 @@ body {
     font-size: 1.25rem;
 }
 
+.table th:nth-child(3),
+.table td:nth-child(3) {
+    width: 200px;
+}
+
+.table th:nth-child(1),
+.table td:nth-child(1) {
+    width: 350px;
+}
+
+.table th:nth-child(4),
+.table td:nth-child(4) {
+    width: 120px;
+}
+
+.table th:nth-child(2),
+.table td:nth-child(2) {
+    width: 160px;
+}
+
+.table td:nth-child(5) {
+    white-space: nowrap;
+}
+
