--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,7 @@
       {% if title %}
         {{ title }}
       {% else %}
-        Лабораторная работа №5
+        Разработка веб-приложений: Экзаменационное задание
       {% endif %}
     </title>
   </head>
@@ -33,9 +33,6 @@
               {% if current_user.is_authenticated %}
                 <li class="nav-item">
                   <a class="nav-link" href="{{ url_for('change_password') }}">Изменить пароль</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="{{ url_for('visit_log.view_logs') }}">Журнал посещений</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">Выйти</a>
@@ -68,26 +65,6 @@
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='main.js') }}" defer></script>
-
-
-
-    <script>
-      const deleteModal = document.getElementById('deleteModal');
-      if (deleteModal) {
-        deleteModal.addEventListener('show.bs.modal', event => {
-          const button = event.relatedTarget;
-          const userName = button.getAttribute('data-user-name');
-          const actionUrl = button.getAttribute('data-url');
-    
-          const modalText = deleteModal.querySelector('#userNameToDelete');
-          const form = deleteModal.querySelector('#deleteForm');
-    
-          modalText.textContent = userName;
-          form.action = actionUrl;
-        });
-      }
-    </script>
     
   </body>
 
